--- a/general.css
+++ b/general.css
@@ -41,6 +41,8 @@ Medium:
 :root{
   /* COLORS */
   /* MAIN */
+  --main-yellow-tint2: #ffefcd;
+  --main-yellow-tint1: #ffe4ab;
   --main-yellow:#FFC857;
   --main-yellow-shade1:#332811; 
   --main-yellow-shade2:#191409;
@@ -62,6 +64,11 @@ Medium:
   --regular:400;
 
   /* WHITESPACE */
+  --ws-xl-x5: 20rem;
+  --ws-xl-x4: 18rem;
+  --ws-xl-x3: 15rem;
+  --ws-xl-x2: 12.8rem;
+  --ws-xl-x1: 8rem;
   --ws-xl: 6.4rem;
   --ws-large: 4.8rem;
   --ws-medium: 3.2rem;
@@ -85,7 +92,7 @@ html {
 
 body {
   color: var(--grey);
-  
+  background-color: var(--main-yellow-tint2);
   font-family: "Inter", sans-serif;
 }
 
