--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
   position: relative;
   align-content: center;
   justify-items: center;
-  
 }
 .header::before{
   content:"";
@@ -44,4 +43,42 @@
 }
 .create-recipe:hover, .create-recipe:active{
   box-shadow: inset 0 0 10px 5px rgba(25, 20, 9, 0.1);
+}
+.main{
+  padding-top: var(--ws-xl-x5);
+}
+.recipe{
+  max-width: 100rem;
+  margin: 0 auto;
+  
+  
+  
+}
+.recipe-header{
+  position: relative;
+  background-color: var(--main-yellow);
+  border-radius: 100px 100px 0 0;
+  padding-top: calc(15% + var(--ws-small-x1));
+}
+.recipe-img-container{
+  position: relative;
+}
+.recipe-img{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  display: block;
+  border-radius: 50%;
+}
+.recipe-name, .divider, .rating, .number-reviews, .recipe-details{
+  text-align: center;
+}
+.recipe-name{
+  font-size: var(--size-medium);
+  font-weight: var(--semi-bold);
+  color: var(--main-yellow-shade1);
 }
