--- a/general.css
+++ b/general.css
@@ -110,3 +110,10 @@ body {
   font-weight: var(--bold);
   color: var(--accent-red);
 }
+.checkbox-reset {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  appearance: none;
+  /* For iOS < 15 to remove gradient background */
+  background-color: #fff;
+}
