--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,17 @@
   box-shadow: inset 0 0 10px 5px rgba(25, 20, 9, 0.1);
 }
 .main {
-  padding-top: var(--ws-xl-x5);
+  padding: var(--ws-xl-x5) 0;
 }
 
 .recipe {
   max-width: 100rem;
   margin: 0 auto;
   padding: 0 var(--ws-small);
+}
+.recipe-container {
+  background-color: var(--main-yellow-tint2);
+  border-radius: 10rem;
 }
 .recipe-header,
 .ingredients,
@@ -65,7 +69,7 @@
 .recipe-header {
   position: relative;
   background-color: var(--main-yellow);
-  border-radius: 100px 100px 0 0;
+  border-radius: 10rem 10rem 0 0;
 
   padding-top: calc(15% + var(--ws-small-x1));
 }
@@ -96,11 +100,7 @@
   color: var(--main-yellow-shade4);
   margin-bottom: var(--ws-medium);
 }
-.divider {
-  margin: 0 auto;
-  border: 1px solid var(--main-yellow-shade1);
-  margin-bottom: var(--ws-small);
-}
+
 .ratings {
   display: flex;
   justify-content: center;
@@ -265,4 +265,28 @@
   justify-content: center;
 }
 .nutrition {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ws-small-x1);
+  font-size: var(--size-small-x1);
+  color: var(--main-yellow-shade4);
+  background-color: var(--main-yellow-tint2);
+  border-radius: 0 0 10rem 10rem;
+  padding-bottom: var(--ws-xl-x1);
+}
+.nutrition-header {
+  display: flex;
+  align-items: center;
+  gap: var(--ws-small-x1);
+}
+.nutrition-label {
+  font-size: var(--size-small);
+  font-weight: var(--bold);
+}
+.nutrition-info {
+  display: flex;
+  gap: var(--ws-small);
+}
+.nutrition-bold {
+  font-weight: var(--bold);
 }
