--- a/general.css
+++ b/general.css
@@ -131,3 +131,13 @@ body {
 .reset-focus {
   outline: none;
 }
+.hidden-label {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
