--- a/styles.css
+++ b/styles.css
@@ -834,3 +834,29 @@
 .add-instruction-icon {
   --ionicon-stroke-width: 60px;
 }
+/* Nutrition Inputs */
+.nutrition-inputs-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  flex-direction: column;
+  gap: var(--ws-small-x1);
+  margin-block: var(--ws-small-x2);
+}
+.nutrition-input-container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ws-small-x2);
+}
+.nutrition-input {
+  display: flex;
+  align-items: center;
+  gap: var(--ws-small-x2);
+}
+.nutrition-qty-input {
+  width: 12rem;
+}
+.nutrition-measurement {
+  font-size: var(--size-small-x1);
+  font-weight: var(--regular);
+  flex: 1;
+}
