--- a/views/index.ejs
+++ b/views/index.ejs
@@ -668,15 +668,16 @@
               </div>
             </div>
           </div>
-
+          <!-- to hide arrow icon (hide-arrow-icon) -->
           <button
             class="next-btn default-btn reset-focus"
             id="create-recipe-btn-1"
             type="button"
           >
-            Submit
-            <!-- Next
-            <ion-icon name="arrow-forward-outline"></ion-icon> -->
+            <p class="next-button-text">Next</p>
+            <div class="arrow-icon-container">
+              <ion-icon name="arrow-forward-outline"></ion-icon>
+            </div>
           </button>
         </form>
       </div>
